--- a/X-Ray Scanner/MainWindow.xaml
+++ b/X-Ray Scanner/MainWindow.xaml
@@ -32,14 +32,14 @@
         <xRayScanner:ScaleToPercentConverter 
             x:Key="scaleToPercentConverter" 
             />
-        
+
         <!-- 
         Converts a color value to a brush.
         -->
         <xRayScanner:ColorToBrushConverter 
             x:Key="colorToBrushConverter"
             />
-        
+
 
     </Window.Resources>
 
@@ -138,7 +138,7 @@
                     </Canvas>
                 </ContentControl>
             </StatusBarItem>
-            
+
             <StatusBarItem Grid.Column="4" Padding="0,10,0,0">
                 <ContentControl>
                     <ResizeGrip VerticalAlignment="Bottom"></ResizeGrip>
@@ -161,14 +161,14 @@
                  >
                 </Image>
             </Border>
-            <Button x:Name="ShowButton" 
-                    Content="Показать" 
-                    Canvas.Left="248" 
+            <Button x:Name="ShowButton"
+                    Content="Показать"
+                    Canvas.Left="217" 
                     Canvas.Top="10" 
                     Width="68" Click="ShowButton_Click"/>
             <Button x:Name="CloseImageButton" 
                     Content="Закрыть" 
-                    Canvas.Left="248" 
+                    Canvas.Left="217" 
                     Canvas.Top="40" 
                     Width="68" Click="CloseImageButton_Click"/>
 
@@ -178,8 +178,9 @@
             <Button x:Name="ZoomPlusButton" 
                     Canvas.Left="10" 
                     Canvas.Top="250" 
-                    Width="40" 
-                    Height="40" 
+                    Width="36" 
+                    Height="36"
+                    IsEnabled="False"
                     RenderTransformOrigin="0.5,0.5"
                     Command="{StaticResource Commands.ZoomIn}"
                     >
@@ -191,7 +192,7 @@
                         <TranslateTransform/>
                     </TransformGroup>
                 </Button.RenderTransform>
-                <Viewbox Width="30" Height="30">
+                <Viewbox Width="26" Height="26">
                     <Canvas Width="24" Height="24">
                         <Path Data="M9,2A7,7 0 0,1 16,9C16,10.57 15.5,12 14.61,13.19L15.41,14H16L22,20L20,22L14,16V15.41L13.19,14.61C12,15.5 10.57,16 9,16A7,7 0 0,1 2,9A7,7 0 0,1 9,2M8,5V8H5V10H8V13H10V10H13V8H10V5H8Z" Fill="{StaticResource AccentColorBrush}" />
                     </Canvas>
@@ -202,10 +203,11 @@
             The 100% button.  Causes the content to be scaled to 100 percent.
             -->
             <Button x:Name="ZoomRefreshButton" 
-            	Canvas.Left="65" 
+            	Canvas.Left="50" 
             	Canvas.Top="250" 
-            	Width="40" 
-            	Height="40" 
+            	Width="36" 
+            	Height="36"
+                    IsEnabled="False"
             	RenderTransformOrigin="0.5,0.5"
                 Command="{StaticResource Commands.OneHundredPercent}">
                 <Button.RenderTransform>
@@ -216,7 +218,7 @@
                         <TranslateTransform/>
                     </TransformGroup>
                 </Button.RenderTransform>
-                <Viewbox Width="30" Height="30">
+                <Viewbox Width="26" Height="26">
                     <Canvas Width="24" Height="24">
                         <Path Data="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" Fill="{StaticResource AccentColorBrush}" />
                     </Canvas>
@@ -227,10 +229,11 @@
             The fill button.  Causes the content to be scaled so that it fits in the viewport.
             -->
             <Button x:Name="ZoomExpandButton" 
-            	Canvas.Left="120" 
+            	Canvas.Left="134" 
             	Canvas.Top="250" 
-            	Width="40" 
-            	Height="40" 
+            	Width="36" 
+            	Height="36"
+                IsEnabled="False"
             	RenderTransformOrigin="0.5,0.5"
                 Command="{StaticResource Commands.Fill}">
                 <Button.RenderTransform>
@@ -241,7 +244,7 @@
                         <TranslateTransform/>
                     </TransformGroup>
                 </Button.RenderTransform>
-                <Viewbox Width="30" Height="30">
+                <Viewbox Width="26" Height="26">
                     <Canvas Width="24" Height="24">
                         <Path Data="M9.5,13.09L10.91,14.5L6.41,19H10V21H3V14H5V17.59L9.5,13.09M10.91,9.5L9.5,10.91L5,6.41V10H3V3H10V5H6.41L10.91,9.5M14.5,13.09L19,17.59V14H21V21H14V19H17.59L13.09,14.5L14.5,13.09M13.09,9.5L17.59,5H14V3H21V10H19V6.41L14.5,10.91L13.09,9.5Z" Fill="{StaticResource AccentColorBrush}" />
                     </Canvas>
@@ -250,10 +253,11 @@
 
             <!-- Button to zoom out. -->
             <Button x:Name="ZoomMinusButton" 
-            	Canvas.Left="170" 
+            	Canvas.Left="174" 
             	Canvas.Top="250" 
-            	Width="40" 
-            	Height="40" 
+            	Width="36" 
+            	Height="36"
+                IsEnabled="False"
             	RenderTransformOrigin="0.5,0.5"
                 Command="{StaticResource Commands.ZoomOut}">
                 <Button.RenderTransform>
@@ -264,7 +268,7 @@
                         <TranslateTransform/>
                     </TransformGroup>
                 </Button.RenderTransform>
-                <Viewbox Width="30" Height="30">
+                <Viewbox Width="26" Height="26">
                     <Canvas Width="24" Height="24">
                         <Path Data="M9,2A7,7 0 0,1 16,9C16,10.57 15.5,12 14.61,13.19L15.41,14H16L22,20L20,22L14,16V15.41L13.19,14.61C12,15.5 10.57,16 9,16A7,7 0 0,1 2,9A7,7 0 0,1 9,2M5,8V10H13V8H5Z" Fill="{StaticResource AccentColorBrush}" />
                     </Canvas>
@@ -272,14 +276,16 @@
             </Button>
 
             <!-- Slider to change the current zoom level. -->
-            <Slider Canvas.Left="10" 
+            <Slider x:Name="ZoomSlider"
+                    Canvas.Left="10" 
                     Canvas.Top="222" 
                     Width="200"
                     Minimum="10" 
                     LargeChange="20" 
                     TickFrequency="10" 
-                    Maximum="200" 
-                    SmallChange="10" 
+                    Maximum="200"
+                    SmallChange="10"
+                    IsEnabled="False"
                     TickPlacement="TopLeft"
                     Value="{Binding ElementName=zoomAndPanControl, Path=ContentScale, Converter={StaticResource scaleToPercentConverter}}"
                 />
@@ -288,13 +294,17 @@
             This is the label that shows what the current zoom level
             is while zooming in and out.
             -->
-            <TextBlock Canvas.Left="228" 
+            <TextBlock Canvas.Left="89" 
                        Text="{Binding ElementName=zoomAndPanControl, Path=ContentScale, Converter={StaticResource scaleToPercentConverter}}" 
-                       Canvas.Top="264"/>
-            <TextBlock Canvas.Left="247" 
+                       Foreground="{StaticResource AccentColorBrush}"
+                       Canvas.Top="262" 
+                       FontWeight="Bold" 
+                       TextAlignment="Right" Width="28"/>
+            <TextBlock Canvas.Left="118"
+                       Foreground="{StaticResource AccentColorBrush}"
                        Text="%" 
-                       Canvas.Top="264"/>
-
+                       Canvas.Top="262"
+                       FontWeight="Bold"/>
         </Canvas>
         <Grid Grid.Row="1" Grid.Column="2" Grid.RowSpan="2">
             <Grid.Resources>
@@ -465,10 +475,10 @@
                                            MouseDoubleClick="zoomAndPanControl_MouseDoubleClick"
                                            >
                 <Grid>
-                <Image x:Name="content" 
+                    <Image x:Name="content" 
                    Stretch="None"
                    >
-                </Image>
+                    </Image>
                     <Canvas
 						x:Name="dragZoomCanvas"
 						Visibility="Collapsed"
