--- a/X-Ray Scanner/MainWindow.xaml
+++ b/X-Ray Scanner/MainWindow.xaml
@@ -253,14 +253,15 @@
 
             <!-- Button to zoom out. -->
             <Button x:Name="ZoomMinusButton" 
-            	Canvas.Left="174" 
-            	Canvas.Top="250" 
-            	Width="36" 
-            	Height="36"
-                IsEnabled="False"
-            	RenderTransformOrigin="0.5,0.5"
-                MouseLeave="MouseLeaveInfo"
-                Command="{StaticResource Commands.ZoomOut}" MouseMove="ZoomMinusButton_MouseMove">
+            	    Canvas.Left="174" 
+            	    Canvas.Top="250" 
+            	    Width="36" 
+            	    Height="36"
+                    IsEnabled="False"
+            	    RenderTransformOrigin="0.5,0.5"
+                    MouseLeave="MouseLeaveInfo"
+                    Command="{StaticResource Commands.ZoomOut}" 
+                    MouseMove="ZoomMinusButton_MouseMove">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -318,6 +319,23 @@
                     Canvas.Top="10" 
                     Width="74" 
                     Click="OpenFileButton_Click"/>
+            <ToggleButton x:Name="InvertColorButton"
+                          Width="47"
+                          Height="45"
+                          IsEnabled="False"
+                          Style="{DynamicResource MetroCircleToggleButtonStyle}" 
+                          Canvas.Left="210" 
+                          Canvas.Top="245" 
+                          Click="InvertColorButton_Click"
+                          MouseLeave="MouseLeaveInfo" MouseMove="InvertColorButton_MouseMove">
+                <Viewbox Width="30" Height="30">
+                    <Canvas Width="24" Height="24">
+                        <Path x:Name="InvColButFillImg"
+                              Data="M12,19.58V19.58C10.4,19.58 8.89,18.96 7.76,17.83C6.62,16.69 6,15.19 6,13.58C6,12 6.62,10.47 7.76,9.34L12,5.1M17.66,7.93L12,2.27V2.27L6.34,7.93C3.22,11.05 3.22,16.12 6.34,19.24C7.9,20.8 9.95,21.58 12,21.58C14.05,21.58 16.1,20.8 17.66,19.24C20.78,16.12 20.78,11.05 17.66,7.93Z" 
+                              Fill="{StaticResource AccentColorBrush}" />
+                    </Canvas>
+                </Viewbox>
+            </ToggleButton>
         </Canvas>
         <Grid Grid.Row="1" Grid.Column="2" Grid.RowSpan="2">
             <Grid.Resources>
