--- a/X-Ray Scanner/MainWindow.xaml
+++ b/X-Ray Scanner/MainWindow.xaml
@@ -390,8 +390,8 @@
                             Margin="198,41,0,0" 
                             VerticalAlignment="Top" 
                             Height="20"
-                            Width="136" 
-                            Click="ConnectButton_Click"/>
+                            Width="136"
+                            Click="ConnectButton_Click"/> 
                         <TextBox Grid.Row="0"
                              x:Name="SendDataTextBox" 
                     	     HorizontalAlignment="Left" 
@@ -402,7 +402,7 @@
                     	     VerticalAlignment="Top" 
                     	     Width="171" 
                              MouseMove="SendDataTextBox_MouseMove" 
-                             MouseLeave="MouseLeaveInfo" KeyDown="SendDataTextBox_KeyDown"/>
+                             MouseLeave="MouseLeaveInfo"/> <!--KeyDown="SendDataTextBox_KeyDown"-->
                         <Label Grid.Row="0" 
                            x:Name="Label7" 
                     	   Content="Данные для отправки :" 
@@ -416,7 +416,7 @@
                     	    Margin="198,94,0,0" 
                     	    VerticalAlignment="Top" 
                     	    Height="20"
-                    	    Width="136" Click="SendButton_Click"/>
+                    	    Width="136" /><!--Click="SendButton_Click"-->
                         <Label Grid.Row="0" 
                            x:Name="Label8" 
                     	   Content="Обмена данными :" 
@@ -429,14 +429,14 @@
                              Text="Начало работы.&#x0a;"
                              VerticalScrollBarVisibility="Visible" 
                              AcceptsReturn="True" 
-                             IsReadOnly="True" 
-                             TextChanged="StatusTextBox_TextChanged"/>
+                             IsReadOnly="True"/> 
+                             <!--TextChanged="StatusTextBox_TextChanged"-->
                         <Button Grid.Row="0" x:Name="CleanButton" 
                             Content="Очистить поле"
                             HorizontalAlignment="Left"
                             Margin="198,120,0,0" 
                             VerticalAlignment="Top"
-                            Width="136" Click="CleanButton_Click"/>
+                            Width="136"/> <!--Click="CleanButton_Click"-->
                         <Button Grid.Row="0"
                      	x:Name="DisconnectButton" 
                      	Content="Разорвать соединение" 
@@ -444,7 +444,7 @@
                      	Margin="198,68,0,0" 
                      	VerticalAlignment="Top" 
                      	Height="20"
-                     	Width="136" Click="DisconnectButton_Click"/>
+                     	Width="136"/> <!--Click="DisconnectButton_Click"-->
                     </Grid>
                 </TabItem>
                 <TabItem Header="Обработка изображения" 
