--- a/X-Ray Scanner/MainWindow.xaml
+++ b/X-Ray Scanner/MainWindow.xaml
@@ -335,6 +335,11 @@
                 Canvas.Left="242" 
                 Canvas.Top="182" 
                 Width="80" Click="TestButton2_Click"/>
+            <Button x:Name="PrintButton" 
+                Content="Print" 
+                Canvas.Left="243" 
+                Canvas.Top="94" 
+                Width="80" Click="PrintButton_Click"/>
         </Canvas>
         <Grid Grid.Row="1" Grid.Column="2" Grid.RowSpan="2">
             <Grid.Resources>
